# EngineTest

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  EngineTest  RenderDoc.cap  emscripten_build.sh  emscripten_run.sh  meson.build
assets/: backpack.glb  backpack.xml  green.mtl  green_fixed.xml  jmodl.mtl  jmodl.xml
assets/backpack_data/: backpack_BezierCurve.001.emesh  backpack_Cube.034.emesh  backpack_Cube.035.emesh  backpack_Cube.036.emesh  backpack_Cube.038.emesh  backpack_Cube.039.emesh  backpack_Cube.040.emesh  backpack_Cube.041.emesh  backpack_Cube.042.emesh  backpack_Cube.043.emesh  backpack_Cube.044.emesh  backpack_Cube.045.emesh  backpack_Cube.046.emesh  backpack_Cube.047.emesh  backpack_Cube.048.emesh  backpack_Cube.049.emesh  backpack_Cube.050.emesh  backpack_Cube.052.emesh  backpack_Cube.053.emesh  backpack_Cube.054.emesh  backpack_Cube.055.emesh  backpack_Cube.056.emesh  backpack_Cube.057.emesh  backpack_Cube.058.emesh  backpack_Cube.059.emesh  backpack_Cube.060.emesh  backpack_Cube.061.emesh  backpack_Cube.062.emesh  backpack_Cube.063.emesh  backpack_Cylinder.037.emesh  backpack_Cylinder.038.emesh  backpack_Cylinder.039.emesh  backpack_Cylinder.040.emesh  backpack_Cylinder.041.emesh  backpack_Cylinder.042.emesh  backpack_Cylinder.043.emesh  (+43 more)
shaders/: basic.vert  default.frag  default.vert  green.frag  pbr.frag  save_test.xml  test.lz4  test.mesh  test.xml
subprojects/glad/: meson.build
subprojects/glad/include/: glad.h
subprojects/glad/src/: glad.c
tests/: IdGetTest.cpp  RenderTest.cpp  RunTest.cpp  test1.cpp
(+100 files in other folders)
